[package]
name = "rust_gym"
version = "0.1.0"
authors = ["ignazio-bovo <10487328@polimi.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = { package = 'sp-std', version = '3.0.0', default-features = false}
sp-runtime = { package = 'sp-runtime', version = '3.0.0', default-features = false}
sp-core = { package = 'sp-core', version = '3.0.0', default-features = false}
codec = { package = 'parity-scale-codec', version = '1.2.0', default-features = false}

[features]
default = ['std']
std = [
	'sp-std/std',
	'sp-core/std',
	'sp-runtime/std',
]
